# SimplesGC

./: CMakeLists.txt  README.md
src/: Garbage.cpp  Garbage.hpp  main.cpp  pch.h
